--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,9 @@ confidenziale.py
 bootstrap_sandbox.html
 
 workspace.code-workspace
+
+digi.vatlib.it_2021-10-06_16-41-49.report.html
+
+digi.vatlib.it_2021-10-06_16-40-57.report.html
+
+Untitled.ipynb
